# cobalt-cli

./: Cargo.toml  README.md  cobalt-cli.sh
src/: download.rs  errors.rs  list.rs  main.rs  playlist.rs
