[package]
name = "cobalt-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
clap = "4.3.21"
dirs = "5.0.1"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }
futures-util = "0.3.28"